# leaving-academia-for-tech

./: .gitignore  2022-10-06-Getting Out of Academia and into Tech Without a Hard Sciences Degree.ipynb  Dockerfile  Makefile  README.md  config.yml  custom_functions.py  data_scientist_google_jobs_search_20221118.csv  pyproject.toml  sample_job_description.csv
src/: __init__.py  constants.py  resources.py
src/resources/: __init__.py  constants.py  google_query.py
