[tool.poetry]
name = "leaving-academia-for-tech"
version = "0.1.0"
description = ""
authors = ["willie"]
readme = "README.md"
packages = [{include = "leaving_academia_for_tech"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
